--- a/CV/CV-MarkPiraino-complete.tex
+++ b/CV/CV-MarkPiraino-complete.tex
@@ -37,6 +37,9 @@ B.S. in Chemistry and Mathematics
 \begin{rSection}{Certificates}
 	{\bf Northwestern University School of Professional Studies} \hfill {\em December 2020 (expected)} \\ 
 	Data Science and Visualization
+	
+	{\bf Coursera}  \\ 
+	\href{https://coursera.org/share/f9a0d707acde360e04a6f75aa7adecba}{Deep Learning} \hfill \hfill {\em September 2020}
 \end{rSection}
 
 \begin{rSection}{Research Interests}
