--- a/CV/CV-MarkPiraino-complete.tex
+++ b/CV/CV-MarkPiraino-complete.tex
@@ -23,6 +23,9 @@
 
 \begin{rSection}{Education}
 	
+{\bf DePaul University} \hfill {\em in progress} \\ 
+M.S. in Computer Science
+	
 {\bf University of Victoria} \hfill {\em August 2019} \\ 
 Ph.D. in Mathematics
 	
@@ -35,15 +38,18 @@ B.S. in Chemistry and Mathematics
 \end{rSection}
 
 \begin{rSection}{Certificates}
-	{\bf Northwestern University School of Professional Studies} \hfill {\em December 2020 (expected)} \\ 
+	{\bf Northwestern University School of Professional Studies} \hfill {\em December 2020} \\ 
 	Data Science and Visualization
 	
 	{\bf Coursera}  \\ 
 	\href{https://coursera.org/share/f9a0d707acde360e04a6f75aa7adecba}{Deep Learning} \hfill \hfill {\em September 2020}
+	
+	{\bf edX}  \\ 
+	\href{#}{Pricing Options with Mathematical Models} \hfill \hfill {\em January 2021}
 \end{rSection}
 
 \begin{rSection}{Research Interests}
-	I am interested in a variety of problems most of which sit at the intersection of ergodic theory, dynamical systems, probability, and statistical mechanics. These include topics such as random matrix products, factor maps, sub-additive thermodynamic formalism, ergodic properties of equilibrium states, and phase transitions.
+	I am interested in a variety of problems most of which sit at the intersection of ergodic theory, dynamical systems, probability, and statistical mechanics. These include topics such as random matrix products, factor maps, sub-additive thermodynamic formalism, ergodic properties of equilibrium states, and limit laws for Lyapunov exponents.
 \end{rSection}
 
 \begin{rSection}{Publications}
@@ -58,7 +64,7 @@ B.S. in Chemistry and Mathematics
 		
 		\item 
 		The weak Bernoulli property for matrix Gibbs states.\\
-		to appear in \emph{Ergodic Theory and Dynamical Systems}, DOI: \href{https://doi.org/10.1017/etds.2018.129}{\small{https://doi.org/10.1017/etds.2018.129}}
+		\emph{Ergodic Theory and Dynamical Systems}, DOI: \href{https://doi.org/10.1017/etds.2018.129}{\small{https://doi.org/10.1017/etds.2018.129}}
 		
 		\item 
 		Projections of Gibbs states for H\"older potentials.\\
@@ -73,6 +79,9 @@ B.S. in Chemistry and Mathematics
 		
 		\item
 		Math 220-2: Single-Variable Integral Calculus. (Winter 2020, Fall 2020 $\times 2$)
+		
+		\item
+		Math 240-0: Linear Algebra. (Winter 2021)
 		
 	\end{rSubsection}
 	%------------------------------------------------
